--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -23,6 +23,7 @@
             <div class="info col-sm-6 ">
                 <div class="text-description">
                     Tell us something about you.
+                    <div *ngIf="userObject.homeBase" class="">My Home Base: {{userObject.homeBase}} </div>
                 </div>
             </div>
 
