Working on post: added the map, added the add photo button. Fixed a bug in edit profile page.

--- a/src/app/user/edit-profile/edit-profile.component.html
+++ b/src/app/user/edit-profile/edit-profile.component.html
@@ -11,8 +11,8 @@
             <div class="image-upload">
                 <label for="file-input">
                     <div class="thumbnail d-flex align-items-center justify-content-center">
-                        <img [src]="url" class=" profile profile-avatar" title="Change Picture">
-                        <img [src]="urlDummy" class="hide-this" title="Change Picture">
+                        <img [src]="url" class="profile profile-avatar" title="Change Picture">
+                        <img [src]="urlDummy" class="" title="Change Picture">
                     </div>
                 </label>
                 <input id="file-input" type="file" (change)="onSelectFile($event)" />
