--- a/src/app/user/post/post.component.scss
+++ b/src/app/user/post/post.component.scss
@@ -1,3 +1,5 @@
+@import '~scss/profile';
+
 $button-color: #0B8457;
 $primary-color: #AB535A;
 $second-color:  rgb(44, 39, 40);
@@ -23,3 +25,39 @@ $second-color:  rgb(44, 39, 40);
     margin-top: 5%;
 }
 
+.photo{
+    height: 100px;
+    width: 100px;
+}
+
+.thumbnail {
+    width: 100px;
+    height: 100px;
+}
+
+.inputPhotos
+{
+    display: none;
+}
+
+.arrayOfImage{
+    display: inline;
+}
+
+.deletePicture{
+    color: #ff3d4f;
+    position: absolute;
+    top: -7px;
+    left: -7px;
+    font-size: 20px;
+    z-index: 200;
+   
+}
+
+.deletePicture:hover{
+    cursor: pointer;
+}
+
+.container {
+    position: relative;
+}
