--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -46,6 +46,17 @@
     <br>
     <div>
         <div *ngFor="let post of allMyPosts" class="post-container">
+
+            <div class="d-flex justify-content-end">
+                <a class="p-2 edit-post"  title="Edit Post">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <a class="p-2 delete-post"  title="Delete Post" (click) = "openModal(template, post.id)">
+                        <i class="far fa-trash-alt"></i>
+                </a>
+            </div>
+           
+
             <h3>{{post.postName}}</h3>
             <h5>{{post.tripName}}</h5>
             <div>{{ post.creationDate | date }} </div>
@@ -66,3 +77,13 @@
     </div>
 
 </div>
+
+
+<ng-template #template>
+        <div class="modal-body text-center">
+          <p>Are you sure you want to delete this post?</p>
+          <button type="button" class="btn btn-default" (click)="confirm()" >Yes</button>
+          <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+        </div>
+      </ng-template>
+      
