--- a/src/app/user/search-destinations/search-destinations.component.html
+++ b/src/app/user/search-destinations/search-destinations.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header profile-wrapper">
       <h2 >DISCOVER NEW DESTINATIONS</h2>
-      <p class="text">Do not you know where to go? What's your next travel destination? See where other people were!</p>
+      <p class="text">Don't know where to go? What's your next travel destination? See where other people were!</p>
     </div>
     <form [formGroup]='searchPlaceForm'>
       <div class="form-group">
