--- a/src/app/user/user-profile/user-profile.component.scss
+++ b/src/app/user/user-profile/user-profile.component.scss
@@ -36,7 +36,7 @@
 }
 
 .edit-post{
-  color: $main-yellow-color!important;
+  // color: $main-yellow-color!important;
   border: solid 1px white;
   margin-right: 1%;
 }
