--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -51,7 +51,7 @@
                 <a class="p-2 edit-post"  title="Edit Post">
                     <i class="fas fa-pencil-alt"></i>
                 </a>
-                <a class="p-2 delete-post"  title="Delete Post" (click) = "openModal(template, post.id)">
+                <a class="p-2 delete-post"  title="Delete Post" (click) = "openModal(template, post.id, post.aboutLocation.countryShort)">
                         <i class="far fa-trash-alt"></i>
                 </a>
             </div>
