--- a/src/app/user/view-user-profile/view-user-profile.component.scss
+++ b/src/app/user/view-user-profile/view-user-profile.component.scss
@@ -1,3 +1,13 @@
 @import '~scss/profile';
 @import '~scss/posts';
 @import '~scss/userProfile';
+
+
+.like-post{
+    color: pink!important;
+    border: solid 1px white;
+}
+
+.like-post:hover{
+    cursor: pointer;
+  }
