--- a/src/app/user/post/post.component.html
+++ b/src/app/user/post/post.component.html
@@ -73,6 +73,9 @@
                     <input type="text" class="form-control" placeholder="Your location" formControlName="location" />
                 </div>
                 <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Your City" formControlName="city" />
+                    </div>
+                <div class="form-group">
                     <input type="text" class="form-control" placeholder="* Name your post" formControlName="postName" />
                 </div>
 
