--- a/src/app/user/search-destinations/search-destinations.component.scss
+++ b/src/app/user/search-destinations/search-destinations.component.scss
@@ -1,2 +1,10 @@
 @import '~scss/search';
 @import '~scss/profile';
+
+.card-title:hover{
+    cursor: pointer;
+}
+
+.card-img-top:hover{
+    cursor: pointer;
+}
